fix: sonarQube 분석 결과 코드 리팩토링